src/interp/snapshots/rsh__interp__token__tests__tokenizer_while_loop.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: While,
        wd: WordDesc {
            text: "while",
            span: Span {
                start: 0,
                end: 5,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "true",
            span: Span {
                start: 6,
                end: 10,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Cmdsep,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Do,
        wd: WordDesc {
            text: "do",
            span: Span {
                start: 11,
                end: 13,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "echo",
            span: Span {
                start: 14,
                end: 18,
            },
            flags: WdFlags(
                BUILTIN,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "working",
            span: Span {
                start: 19,
                end: 26,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
    Tk {
        tk_type: Cmdsep,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Done,
        wd: WordDesc {
            text: "done",
            span: Span {
                start: 27,
                end: 31,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
]
